fix : image block alignment issue

--- a/modules/gutenberg/src/blocks/image/style.scss
+++ b/modules/gutenberg/src/blocks/image/style.scss
@@ -1,6 +1,7 @@
 .wp-block-uagb-image {
 	display: flex;
 	margin-bottom: 1.2em;
+	width: 100%;
 
 	&__figure {
 		position: relative;
